# NEREIDS

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ex003_validation_spec.md  penetration_shift_factors.md  pyproject.toml  reich_moore_physics.md
.claude/: CLAUDE.md  settings.json
.claude/plans/: calm-tumbling-spring.md
.github/workflows/: ci.yml  docs.yml  publish.yml  unit-tests.yml
apps/: README.md
apps/gui/: Cargo.toml  pyproject.toml
apps/gui/assets/: DejaVuSans-LICENSE.txt
apps/gui/icons/: nereids.icns
apps/gui/src/: app.rs  main.rs  pipeline.rs  project.rs  state.rs  telemetry.rs  theme.rs
apps/gui/src/guided/: analyze.rs  bin.rs  configure.rs  detectability.rs  forward_model.rs  landing.rs  load.rs  mod.rs  normalize.rs  rebin.rs  result_widgets.rs  results.rs  roi.rs  sidebar.rs  wizard.rs
apps/gui/src/panels/: data.rs  fitting.rs  map.rs  mod.rs  spectrum.rs
apps/gui/src/studio/: mod.rs
apps/gui/src/widgets/: design.rs  image_view.rs  mod.rs  periodic_table.rs  statusbar.rs  toolbar.rs
apps/nereids-cli/: Cargo.toml
apps/nereids-cli/src/: main.rs
apps/nereids-gui/: Cargo.toml
apps/nereids-gui/src/: app.rs  main.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/nereids/: __init__.py  __init__.pyi
bindings/python/python/nereids/mcp/: __init__.py  __main__.py  server.py
bindings/python/src/: lib.rs
crates/: README.md
crates/endf-mat/: Cargo.toml
crates/endf-mat/scripts/: regenerate_cendl_table.sh  regenerate_tendl_table.sh
crates/endf-mat/src/: abundances.rs  elements.rs  lib.rs  mat.rs  za.rs
crates/nereids-core/: Cargo.toml
crates/nereids-core/src/: background.rs  constants.rs  elements.rs  energy.rs  error.rs  forward_model.rs  lib.rs  nuclear.rs  optimizer.rs  resolution.rs  transmission.rs  types.rs
crates/nereids-endf/: Cargo.toml
crates/nereids-endf/src/: cache.rs  convert.rs  lib.rs  parser.rs  resonance.rs  retrieval.rs  retriever.rs  sammy.rs
crates/nereids-fit/: Cargo.toml
crates/nereids-fit/src/: bayes_gls.rs  lib.rs  pixel_dispatch.rs
crates/nereids-fitting/: Cargo.toml
crates/nereids-fitting/src/: active_mask.rs  error.rs  forward_model.rs  joint_poisson.rs  lib.rs  lm.rs  nelder_mead.rs  parameters.rs  poisson.rs  proximal.rs  transmission_model.rs
crates/nereids-io/: Cargo.toml
crates/nereids-io/src/: error.rs  export.rs  lib.rs  nexus.rs  normalization.rs  project.rs  rebin.rs  spectrum.rs  tiff_stack.rs  tof.rs
crates/nereids-io/src/nexus/: mod.rs  reader.rs  writer.rs
crates/nereids-io/src/resolution/: mod.rs  reader.rs
crates/nereids-io/src/sammy/: mod.rs  par_reader.rs
crates/nereids-io/src/spectra/: mod.rs  reader.rs
crates/nereids-io/src/tiff_io/: mod.rs  reader.rs
crates/nereids-physics/: Cargo.toml
crates/nereids-physics/src/: auxiliary_grid.rs  channel.rs  coulomb.rs  doppler.rs  lib.rs  penetrability.rs  pipeline.rs  reich_moore.rs  resolution.rs  rmatrix_limited.rs  slbw.rs  surrogate.rs  transmission.rs  urr.rs
crates/nereids-physics/src/broadening/: doppler.rs  fgm_weights.rs  mod.rs
crates/nereids-physics/src/resolution/: gaussian.rs  mod.rs  orr.rs  rsl_gaussian.rs  tabulated.rs
crates/nereids-physics/src/rmatrix/: cross_section.rs  mod.rs  penetration.rs  reich_moore.rs
crates/nereids-physics/src/transmission/: beer_lambert.rs  mod.rs  normalization.rs  self_shielding.rs
crates/nereids-physics/tests/: debug_tr007.rs  samtry_validation.rs  test_ex003.rs  test_ex005.rs  test_ex006.rs  test_ex007.rs
crates/nereids-physics/tests/fixtures/sammy_reference/ex003/: config.toml
crates/nereids-physics/tests/fixtures/sammy_reference/ex003/expected/: ex003a.lpt  ex003c.lpt  ex003e.lpt  ex003f.lpt  ex003t.lpt  ex003x.lpt
crates/nereids-physics/tests/fixtures/sammy_reference/ex003/input/: ex003c.inp  ex003c.par
crates/nereids-physics/tests/fixtures/sammy_reference/ex005/expected/: ex005aa.lpt  ex005bb.lpt
crates/nereids-physics/tests/fixtures/sammy_reference/ex005/input/: ex005a.inp  ex005a.par  ex005b.inp
crates/nereids-physics/tests/fixtures/sammy_reference/ex006/expected/: ex006aa.lpt
crates/nereids-physics/tests/fixtures/sammy_reference/ex006/input/: ex006a.inp  ex006a.par
crates/nereids-physics/tests/fixtures/sammy_reference/ex007/expected/: ex007atl.lpt  ex007atl.par  ex007atn.lpt  ex007atn.par  ex007awl.lpt  ex007awl.par  ex007awn.lpt  ex007awn.par
crates/nereids-physics/tests/fixtures/sammy_reference/ex007/input/: ex007.inp  ex007tl.par  ex007tn.par  ex007wl.par  ex007wlx.par  ex007wn.par
crates/nereids-physics/tests/parsers/: dat_parser.rs  lpt_parser.rs  mod.rs  par_parser.rs
crates/nereids-pipeline/: Cargo.toml
crates/nereids-pipeline/src/: calibration.rs  detectability.rs  error.rs  lib.rs  noise.rs  pipeline.rs  regularization.rs  sparse.rs  spatial.rs  test_helpers.rs  tv_admm.rs
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  PROJECT_OVERVIEW.md  REQUIREMENTS.md  ROADMAP.md  gui-requirements.md  sammy-teacher-map.md  sammy-validation-map.md
docs/adr/: 0001-workspace-layout.md  0002-sammy-reference-validation.md  0003-crate-architecture.md  README.md
docs/audit/: 465-mlbw-batch-api-fix.md
docs/design/: spatial-regularization-survey.md
docs/guide/: book.toml
examples/: README.md
examples/data/: venus_resolution_synthetic.txt
examples/notebooks/: 01_cross_sections.ipynb  02_transmission_model.ipynb  03_spectrum_fitting.ipynb  04_multi_isotope_fitting.ipynb  05_endf_loading.ipynb  06_custom_resolution.ipynb  07_forward_model_demo.ipynb  07_spatial_mapping.ipynb  08_pleiades_2d_mapping.ipynb  README.md
homebrew/: nereids.rb
scripts/: README.md  benchmark_jacobian.py  bump-version.sh  fetch_copilot_reviews.py  gh_issues.py  worktree-commit.sh
scripts/fixtures/: extract_venus_aggregated.py  extract_venus_hf_nexus.py
scripts/perf/: baseline_dump.py  profile_a1_lm_grouped.py  profile_b1_lm_tzero_grouped.py  profile_b2_kl_grouped.py  (+10 more)
tests/: test_mcp.py  test_nereids.py
(+189 files in other folders)
