[workspace]
resolver = "2"
members = [
    "crates/endf-mat",
    "crates/nereids-core",
    "crates/nereids-endf",
    "crates/nereids-physics",
    "crates/nereids-io",
    "crates/nereids-fitting",
    "crates/nereids-pipeline",
    "bindings/python",
    "apps/gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/ornlneutronimaging/NEREIDS"

[workspace.dependencies]
# Internal crates
endf-mat = { path = "crates/endf-mat" }
nereids-core = { path = "crates/nereids-core" }
nereids-endf = { path = "crates/nereids-endf" }
nereids-physics = { path = "crates/nereids-physics" }
nereids-io = { path = "crates/nereids-io" }
nereids-fitting = { path = "crates/nereids-fitting" }
nereids-pipeline = { path = "crates/nereids-pipeline" }

# Common external dependencies
thiserror = "2"
ndarray = "0.16"
num-complex = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
dirs = "6"
tiff = "0.11"
image = "0.25"
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["image", "svg"] }
egui_plot = "0.34"
rfd = "0.17"
hdf5 = { package = "hdf5-metno", version = "0.12", features = ["static", "zlib"] }
