[project]
name = "nereids"
version = "0.1.0"
description = "Neutron Resonance Imaging Data Analysis Library"
requires-python = ">= 3.10"
license = "BSD-3-Clause"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "bindings/python/Cargo.toml"
python-source = "bindings/python/python"
module-name = "nereids"
features = ["pyo3/extension-module"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.10"
pip = "*"
maturin = ">=1.0"
numpy = ">=2.4.2,<3"
matplotlib = ">=3.10.8,<4"
jupyter = ">=1.0"
jupyterlab = ">=4.5.4,<5"
pytest = ">=9.0.2,<10"
tifffile = ">=2024.1"

[tool.pixi.tasks]
build = { cmd = "env -u VIRTUAL_ENV maturin develop --release --manifest-path bindings/python/Cargo.toml" }
test-rust = { cmd = "env -u VIRTUAL_ENV cargo test --workspace" }
test-python = { cmd = "python -m pytest tests/", depends-on = ["build"] }
test = { depends-on = ["test-rust", "test-python"] }
fmt = "cargo fmt --all"
clippy = "cargo clippy --workspace -- -D warnings"
check = { depends-on = ["fmt", "clippy", "test"] }
gh-issues = { cmd = "python scripts/gh_issues.py", description = "Query GitHub issues/PRs consistently" }
copilot-reviews = { cmd = "python scripts/fetch_copilot_reviews.py", description = "Fetch Copilot PR review comments" }
