[project]
name = "nereids"
version = "0.1.0"
description = "Neutron Resonance Imaging Data Analysis Library"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
authors = [{ name = "ORNL Neutron Imaging", email = "neutronimaging@ornl.gov" }]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
  "neutron",
  "resonance",
  "imaging",
  "endf",
  "cross-section",
  "spectroscopy",
]
dependencies = ["numpy>=1.26"]

[project.urls]
Homepage = "https://github.com/ornlneutronimaging/NEREIDS"
Repository = "https://github.com/ornlneutronimaging/NEREIDS"
Issues = "https://github.com/ornlneutronimaging/NEREIDS/issues"

[project.optional-dependencies]
mcp = ["fastmcp>=3.0"]
gui = ["nereids-gui==0.1.0"]

[project.scripts]
nereids-mcp = "nereids.mcp:mcp.run"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "bindings/python/Cargo.toml"
python-source = "bindings/python/python"
module-name = "nereids"
features = ["pyo3/extension-module"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.10"
pip = "*"
maturin = ">=1.0"
numpy = ">=2.4.2,<3"
matplotlib = ">=3.10.8,<4"
jupyter = ">=1.0"
jupyterlab = ">=4.5.4,<5"
pytest = ">=9.0.2,<10"
tifffile = ">=2024.1"

[tool.pixi.pypi-dependencies]
fastmcp = ">=3.0"

[tool.pixi.tasks]
build = { cmd = "env -u VIRTUAL_ENV maturin develop --release --manifest-path bindings/python/Cargo.toml" }
test-rust = { cmd = "env -u VIRTUAL_ENV cargo test --workspace" }
test-python = { cmd = "python -m pytest tests/", depends-on = ["build"] }
test = { depends-on = ["test-rust", "test-python"] }
fmt = "cargo fmt --all"
clippy = "cargo clippy --workspace --exclude nereids-python --all-targets -- -D warnings"
check = { depends-on = ["fmt", "clippy", "test"] }
clean = { cmd = "cargo clean", description = "Remove all Rust build artifacts (target/)" }
lint-fmt = { cmd = "cargo fmt --all --check", description = "Check formatting without applying" }
lint-clippy = { cmd = "cargo clippy --workspace --exclude nereids-python --all-targets -- -D warnings", description = "Run clippy lints" }
lint = { depends-on = ["lint-fmt", "lint-clippy"], description = "Run all linters" }
gui = { cmd = "cargo run --release -p nereids-gui", description = "Run the GUI application (release)" }
gui-debug = { cmd = "cargo run -p nereids-gui", description = "Run the GUI application (debug)" }
gui-bundle = { cmd = "cargo bundle --release", cwd = "apps/gui", description = "Bundle the GUI as a macOS .app" }
doc-guide = { cmd = "mdbook build", cwd = "docs/guide", description = "Build the mdBook user guide (requires: cargo install mdbook)" }
doc-api = { cmd = "cargo doc --workspace --no-deps --exclude nereids-python", description = "Build rustdoc API reference" }
doc-build = { cmd = "cp -r target/doc target/book/api", depends-on = ["doc-guide", "doc-api"], description = "Build full docs site (mdBook + rustdoc)" }
doc = { cmd = "python -m http.server 8000", cwd = "target/book", depends-on = ["doc-build"], description = "Build and serve docs locally at http://localhost:8000" }
bump-version = { cmd = "bash scripts/bump-version.sh", description = "Bump version across workspace: pixi run bump-version 0.2.0 [--dry-run]" }
gh-issues = { cmd = "python scripts/gh_issues.py", description = "Query GitHub issues/PRs consistently" }
copilot-reviews = { cmd = "python scripts/fetch_copilot_reviews.py", description = "Fetch Copilot PR review comments" }
