[package]
name = "nereids-gui"
description = "egui desktop application for NEREIDS"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nereids-gui"
path = "src/main.rs"

[dependencies]
nereids-core = { workspace = true }
nereids-endf = { workspace = true }
nereids-physics = { workspace = true }
nereids-io = { workspace = true }
nereids-fitting = { workspace = true }
nereids-pipeline = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
rfd = { workspace = true }
ndarray = { workspace = true }
