[package]
name = "nereids-gui"
description = "egui desktop application for NEREIDS"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "nereids-gui"
path = "src/main.rs"

[dependencies]
nereids-core = { workspace = true }
nereids-endf = { workspace = true }
nereids-physics = { workspace = true }
nereids-io = { workspace = true, features = ["hdf5"] }
nereids-fitting = { workspace = true }
nereids-pipeline = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
rfd = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
sysinfo = "0.33"

# macOS app bundle configuration for cargo-bundle
[package.metadata.bundle]
name = "NEREIDS"
identifier = "gov.ornl.nereids"
icon = ["icons/nereids.icns"]
short_description = "Neutron Resonance Imaging Data Analysis"
long_description = """
NEREIDS is a high-performance library and GUI for neutron resonance imaging
data analysis. It provides cross-section computation, Levenberg-Marquardt
fitting, and spatial composition mapping for the VENUS beamline at SNS, ORNL.
"""
category = "public.app-category.developer-tools"
copyright = "Copyright © 2025-2026 Oak Ridge National Laboratory"
