[package]
name = "nereids-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for NEREIDS."

[dependencies]
nereids-core = { workspace = true }
nereids-physics = { workspace = true }
nereids-fit = { workspace = true }
nereids-endf = { workspace = true }
nereids-io = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
