[package]
name = "nereids-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI application for NEREIDS."

[dependencies]
nereids-core = { workspace = true }
nereids-physics = { workspace = true }
nereids-fit = { workspace = true }
nereids-endf = { workspace = true }
nereids-io = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }

[lints]
workspace = true
