[package]
name = "nereids-python"
description = "PyO3 Python bindings for NEREIDS"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file = "../../LICENSE"
publish = false

[lib]
name = "nereids"
crate-type = ["cdylib"]

[dependencies]
nereids-core = { workspace = true }
nereids-endf = { workspace = true }
nereids-physics = { workspace = true }
nereids-io = { workspace = true }
nereids-fitting = { workspace = true }
nereids-pipeline = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
ndarray = { workspace = true }
