[package]
name = "endf-mat"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "ENDF MAT number lookup, element symbols, and natural isotopic abundances"
repository = "https://github.com/ornlneutronimaging/NEREIDS"
keywords = ["endf", "nuclear", "isotope", "neutron", "element"]
categories = ["science"]

# No external dependencies — pure data + lookup
