[package]
name = "nereids-core"
description = "Core types, constants, and traits for NEREIDS neutron resonance imaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
endf-mat = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
