[package]
name = "nereids-core"
description = "Core types, constants, and traits for NEREIDS neutron resonance imaging"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["neutron", "resonance", "imaging", "nereids", "physics"]
categories = ["science"]

[dependencies]
endf-mat = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
