[package]
name = "nereids-endf"
description = "ENDF file retrieval, caching, and resonance parameter parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["endf", "nuclear", "resonance", "neutron", "parsing"]
categories = ["science"]

[dependencies]
endf-mat = { workspace = true }
nereids-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
dirs = { workspace = true }
