[package]
name = "nereids-fitting"
description = "Optimization engine for resonance fitting (LM, Poisson/BFGS)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["fitting", "levenberg-marquardt", "optimization", "poisson", "neutron"]
categories = ["science"]

[dependencies]
nereids-core = { workspace = true }
nereids-endf = { workspace = true }
nereids-physics = { workspace = true }
