[package]
name = "nereids-io"
description = "Data I/O for TIFF stacks, NeXus files, and VENUS normalization"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nereids-core = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
