[package]
name = "nereids-io"
description = "Data I/O for TIFF stacks, NeXus files, and VENUS normalization"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
hdf5 = ["dep:hdf5"]

[dependencies]
nereids-core = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
tiff = { workspace = true }
hdf5 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
