[package]
name = "nereids-physics"
description = "Cross-section calculation, broadening, and transmission forward model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cross-section", "neutron", "resonance", "physics", "sammy"]
categories = ["science"]

[dependencies]
nereids-core = { workspace = true }
nereids-endf = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }
microlp = { workspace = true }

